demo/api-demo/samples/01-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: api-demo
  name: api-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-demo
  template:
    metadata:
      labels:
        app: api-demo
    spec:
      containers:
        - image: ghcr.io/yogendra/api-demo:latest
          name: api-demo
          ports:
            - name: http
              protocol: TCP
              containerPort: 8080
          resources:
            requests:
              memory: "720Mi"
              cpu: "500m"
            limits:
              memory: "2000Mi"
              cpu: "1000m"
---
