demo/api-demo/samples/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-demo
spec:
  type: ClusterIP
  selector:
    app: api-demo
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      name: http
