demo/api-demo/samples/03-ingress.yaml

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: api-demo
  labels:
    app: api-demo
  annotations:
    ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/ingress.class: contour
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/tls-acme: "true"
spec:
  tls:
    - secretName: api-demo-https-secret
      hosts:
        - api-demo.techtalk.cna-demo.ga
  rules:
    - host: api-demo.techtalk.cna-demo.ga
      http:
        paths:
          - backend:
              serviceName: api-demo
              servicePort: http
