demo/api-demo/samples/full.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: api-demo
  name: api-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-demo
  template:
    metadata:
      labels:
        app: api-demo
    spec:
      containers:
      - image: ghcr.io/yogendra/api-demo:latest
        name: api-demo
        ports:
        - name: http
          protocol: TCP
          containerPort: 8080
        resources: 
          requests:
            memory: "720Mi"
            cpu: "500m"
          limits:
            memory: "2000Mi"
            cpu: "1000m"
---
apiVersion: v1
kind: Service
metadata:
  name: api-demo
spec:
  type: ClusterIP
  selector:
    app: api-demo
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      name: http
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-demo
  labels:
    app: api-demo
  annotations:
    ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/ingress.class: contour
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/tls-acme: "true"
spec:
  tls:
    - secretName: api-demo-https-secret
      hosts:
        - api-demo.techtalk.cna-demo.ga
  rules:
    - host: api-demo.techtalk.cna-demo.ga
      http:
        paths:
          - path: / 
            pathType: Prefix
            backend:
              service:
                name: api-demo
                port: 
                    name: http
